<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
      android:background="@drawable/background"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect"
        android:layout_gravity="center" android:layout_marginBottom="30dp" style="Bold" android:textStyle="bold" android:textSize="15dp" android:layout_marginTop="50dp"/>

   
    <TextView
     
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forStation"
        android:textAppearance="?android:attr/textAppearanceMedium" android:textSize="15dp"/>

    <TextView
        android:id="@+id/tstation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:text=""
        android:layout_marginBottom="20dp"/>
  
    

    <TextView
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forBusStop"
        android:textAppearance="?android:attr/textAppearanceMedium" android:textSize="15dp"/>

    <TextView
        android:id="@+id/bstop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"/>

    
    
    <TextView
     
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forTaxiTime"
        android:textAppearance="?android:attr/textAppearanceMedium" android:textSize="15dp"/>
    <TextView
        android:id="@+id/taxiTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"/>
  
    
     <TextView
     
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forWalkTime"
        android:textAppearance="?android:attr/textAppearanceMedium" android:textSize="15dp"/>
    <TextView
        android:id="@+id/walkTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
     android:layout_marginBottom="20dp"/>

   
    <TextView 
     
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forrealTime"
        android:textAppearance="?android:attr/textAppearanceMedium" android:textSize="15dp"/>
    <TextView
        android:id="@+id/realTim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       />
 	

	 <Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/map" android:layout_marginTop="20dp"/>
    
</LinearLayout>